# AdvancedGraphics

./: .gitignore  CMakeLists.txt  README.md
lib/highway-1.0.7/hwy/tests/: memory_test.cc
shaders/: basic.frag  basic.vert  basic.wgsl  fxaa.frag  fxaa.vert
src/: Application.cpp  Application.h  Interface.cpp  Interface.h  RenderContext.cpp  RenderContext.h  Timer.h  TraceApplication.cpp  TraceApplication.h  Window.cpp  Window.h  Window.hpp  main.cpp
src/core/: Application.cpp  Application.h  Timer.h  Window.cpp  Window.h
src/platform/: GlfwSurfaceExtension.h  GlfwSurfaceMacos.m  GlfwSurfaceUnix.c  GlfwSurfaceWindows.c
src/platform/WinApi/: Window.cpp
src/rendering/: FrameRenderer.cpp  FrameRenderer.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  RenderDeviceManager.cpp  RenderDeviceManager.h
src/tracer/: AABB.cpp  AABB.h  Accumulator.cpp  Accumulator.h  BVH.cpp  BVH.h  BonsaiBVH.cpp  BonsaiBVH.h  BonsaiMiniTreeSelector.cpp  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  PathTracer.cpp  PathTracer.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
src/tracer/BVH/: AABB.cpp  AABB.h  BVH.cpp  BonsaiBVH.h  BonsaiMiniTreeSelector.h
src/utils/: Constants.h  Math.h
tmpl8rt_IGAD-main/: ReadME.txt
tmpl8rt_IGAD-main/1. Basics/: imgui.ini
tmpl8rt_IGAD-main/2. Whitted/: Statistics.h  imgui.ini  renderer.cpp  renderer.h  whitted.vcxproj  whitted.vcxproj.filters
tmpl8rt_IGAD-main/assets/: mercedes.mtl
tmpl8rt_IGAD-main/template/: camera.h  scene.h  template.cpp
